# FantasyHockeyTools

./: .gitignore  CLAUDE.md  DATA_FLOW_ANALYSIS.md  PROJECT-PLAN.md  README.md  YAHOO_SETUP.md  api_export.py  main.py  pyproject.toml  requirements.txt
.claude/skills/: OPEN-QUESTIONS.md
.claude/skills/fht-architecture-contract/: SKILL.md
.claude/skills/fht-debugging-playbook/: SKILL.md
.claude/skills/fht-domain-reference/: SKILL.md
.claude/skills/fht-draft-campaign/: SKILL.md
.claude/skills/fht-operations/: SKILL.md
.claude/skills/fht-player-summaries/: SKILL.md
.claude/skills/fht-quality-gates/: SKILL.md
.claude/skills/fht-research-frontier/: SKILL.md
.github/workflows/: ci.yml
data/raw/: keepers.csv  player_birthdates.csv
data/raw/goalies/: README.md
docs/superpowers/plans/: 2026-07-15-keeper-analyzer.md  (+8 more)
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  test-css-stub.cjs  test-setup.cjs  tsconfig.test.json
models/cooling/: model.pkl
models/lstm/: model.pt  scaler.pkl
models/pickups/: model.pkl
reports/: mock_draft_2025_all_noinj.json  mock_draft_2025_all_noinj_PREFIX_BASELINE.json
scripts/: build_birthdates.py  build_draft_summaries.py  build_goalie_seasons.py  build_keeper_summary.py  build_player_seasons.py
src/: backtest.py  dataProcessing.py  draft_explain.py  fantasyPoints.py  keeper.py  keeper_advisor.py  keepers.py  mockDraft.py  moneypuck.py  nhl-api.py  nhlAPI.py  season.py  yahooAPI.py
src/features/: draft.py  goalies.py  lstmFeatures.py  mlFeatures.py  pickups.py  shared.py
src/models/: __init__.py  cooling.py  draft.py  goalieDraft.py  lstmPickups.py  pickups.py
tests/: test_api_export_draft.py  test_api_export_keeper.py  test_api_export_smoke.py  test_draft_explain.py  test_draft_summaries.py  test_fantasyPoints.py  test_fetch_resume.py  test_goalie_features.py  test_goalie_seasons.py  test_keeper.py  test_keeper_advisor.py  test_keeper_summary.py  test_mlFeatures.py  test_mock_draft.py  test_moneypuck.py  test_nhlAPI.py  test_pickup_blend.py  test_pickup_features.py  test_season.py  test_shared.py  test_yahoo_api.py
ui/: app.py
ui/pages/: draft.py  pickups.py
(+45 files in other folders)
