[project]
name = "fantasy-hockey"
version = "0.1.0"
description = "Fantasy hockey analysis and prediction tools with ML models"
readme = "README.md"
requires-python = ">=3.12"
# Direct dependencies only -- what this repo actually imports. This list used to
# be a flat freeze of an entire venv (110 pins, including ipykernel, jedi,
# debugpy and pydeck), so every transitive upgrade needed a manual bump. Floors
# rather than exact pins for the same reason: annual pin-bumping is exactly the
# friction this repo is trying to remove.
dependencies = [
    "anthropic>=0.116.0",       # keeper advisor + draft summary generation
    "matplotlib>=3.10.8",       # feature-importance / ROC plots in reports/
    "numpy>=2.4.3",
    "objectpath>=0.6.1",        # src/yahooAPI.py team-key extraction
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",          # Parquet engine for the processed cache layer
    "RapidFuzz>=3.14.3",        # Yahoo name -> projection matching
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",            # spearmanr, the ranking metric used everywhere
    "xgboost>=3.2.0",
    "yahoo-oauth>=2.1.1",
    "yahoo-fantasy-api>=2.12.2",
]

[project.optional-dependencies]
# The LSTM (src/models/lstmPickups.py, src/features/lstmFeatures.py) is parked
# until after draft season -- see fht-architecture-contract. Torch is ~3 GB and
# nothing on the shipped path imports it, so it is opt-in:
#     uv pip install -e ".[lstm]"
# For GPU support with CUDA 12.8:
#     uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128
lstm = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "torchaudio>=2.11.0",
]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
fantasy-hockey = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# NOTE: pytest config lives in pytest.ini, NOT here. pytest.ini wins when both
# exist, so a [tool.pytest.ini_options] block here would be a lie that silently
# does nothing.
